--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
-flask
-flask-wtf
-flask-sqlalchemy
-bcrypt
-sqlite3
-secrets
 pip
+Flask
+gunicorn
+Flask-WTF
+Flask-SQLAlchemy
+Flask-Migrate
+Flask-Cors
+bcrypt
+pyOpenSSL
+openai
+secret
+secure-smtplib
+mine
+mysql
+selenium
+user-agent
+beautifulsoup4
